$Header$

MBDyn (C) is a multibody analysis code.
http://www.mbdyn.org

Copyright (C) 1996-2011

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
	Bug fixes:
		- fix structural nodes accel output (Reinhard Resch)
		- fix variable mass body (noted by Francesco Castellini)

MBDyn 1.4.1
	Enhancements:
		- log relative frame dummy nodes (Reinhard Resch)
		- log struct node momentum dofs (Reinhard Resch)
		- added support for octave (Reinhard Resch)
		- improved modal analysis output (Reinhard Resch)
		- added basic support for NREL airfoil data format
		- added airfoil "flip" capability
		- added referenceable template drive callers
		- added "deformable axial joint"
		- added elastomeric damper (from Gandhi, Chopra, JAHS 1994)
		- added muscle constitutive laws (from Pennestri, JB 2007)
		- log structural forces (Reinhard Resch)
		- log missing joint types
		- allow boolean in node/element output flag (Reinhard Resch)
		- added support for 'counter' output flag (Reinhard Resch)
		- added generic rotor trim genel
		- added basic support for underdetermined inverse dynamics
		- added MLS files for domain mapping (Giuseppe Quaranta)
		- added periodic drive caller
		- added node/element private data funcs to model namespace
		- added "current" func to model namespace
		- added partial driven element support to inverse dynamics
		- added support for Mat3x3 & Mat6x6 template drive callers
		- added variable properties body
		- allow Euler angles input in degrees
		- refactor NetCDF support
		- added support for references using Denavit-Hartenberg 
		- added switch to suppress inertia output
		- added simple hydraulic damper model (Giuseppe Quaranta)